# miniCTK

./: .gitignore  CMakeLists.txt  sagittarius.pro
CMake/: ctkMacroSetupQt.cmake
CMakeExternals/: Poco.cmake
Libs/AppUtil/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.blueberry.core.runtime/: CMakeLists.txt  target_libraries.cmake
Plugins/org.blueberry.core.runtime/src/dynamichelpers/: berryIExtensionTracker.h
Plugins/org.blueberry.ui.qt/: CMakeLists.txt  target_libraries.cmake
Utilities/mbilog/: CMakeLists.txt  mbilogTextBackendBase.cpp
